test: add test methods for evaluation and similarity